--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles --silent",
-    "dev": "nodemon app.js"
+    "test": "jest --detectOpenHandles --silent --forceExit --noStackTrace --verbose --watchAll --maxWorkers=1",
+    "dev": "nodemon ./bin/server.js",
+    "docker": "node ./bin/server.js"
   },
   "keywords": [],
   "author": "",
