--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,7 +49,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - name: unit testing
-      run: npm run test
+      run: npm run docker-test
       env:
         POSTGRES_USERNAME: "postgres"
         POSTGRES_PASSWORD: "postgres"
